--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <html>
-<head>
 
-</head>
+    <head>
+    <title>Himaja's Portfolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="portfoliothemestyle.css" type="text/css" rel="stylesheet">
+  </head>
+
+  <body>
+
+     <div class="navbar">
+       <div class="page-header_1"> <h1>Himaja Motheram</h1> </div>
+        <div><a href="portfolio theme.html">Home</a></div>
+        <div><a href="about.html">About</a></div>
+    </div>
+
+<!-- PARALLAX SCROLLING IMAGES START-->
+    <div class="bgimg-1"></div>
+
+    <div class="blurb">
+      <div class="blurb-1">
+        <h1> Title </h1>
+        <h4> November 14, 2016 </h4>
+      </div>
+    </div>
+
+    <div class="bgimg-2"></div>
+
+    <div class="blurb">
+      <div class="blurb-2">
+        <h1> Title </h1>
+        <h4> November 14, 2016 </h4>
+      </div>
+    </div>
+
+    <div class="bgimg-3"></div>
+
+    <div class="blurb">
+      <div class="blurb-3">
+        <h1> Title </h1>
+        <h4> November 14, 2016 </h4>
+      </div>
+    </div>
+
+    <div class="bgimg-4"></div>
+
+    <div class="blurb">
+      <div class="blurb-4">
+        <h1> Title </h1>
+        <h4> November 14, 2016 </h4>
+      </div>
+    </div>
+
+    <div class="bgimg-5"></div>
+
+    <div class="blurb">
+      <div class="blurb-5">
+        <h1> Title </h1>
+        <h4> November 14, 2016 </h4>
+      </div>
+    </div>
+
+    <div class="bgimg-6"></div>
+
+    <div class="blurb">
+      <div class="blurb-6">
+        <h1> Title </h1>
+        <h4> November 14, 2016 </h4>
+      </div>
+    </div>
+<!-- PARALLAX SCROLLING IMAGES END-->
 
 
-<body>
+  </body>
 
-<h1> HELLOW WORLD </h1>
-</body>
+
 
 </html>
